// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text> renders 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      false,
      Object {},
    ]
  }
/>
`;

exports[`<Text> when {body level:1} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      false,
      Object {},
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {body level:2} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 14,
        "lineHeight": 24,
      },
      false,
      Object {},
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {body level:3} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 12,
        "lineHeight": 17,
      },
      false,
      Object {},
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {caption level:1} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 14,
        "lineHeight": 18,
      },
      false,
      Object {},
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {caption level:2} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 12,
        "lineHeight": 16,
      },
      false,
      Object {},
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {color} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      false,
      Object {
        "color": "#ef5160",
      },
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {headline level:0} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontFamily": undefined,
        "fontSize": 120,
        "fontWeight": "700",
        "letterSpacing": -5,
        "lineHeight": 120,
      },
      false,
      Object {},
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {headline level:1} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontFamily": undefined,
        "fontSize": 94,
        "fontWeight": "700",
        "letterSpacing": -3.92,
        "lineHeight": 94,
      },
      false,
      Object {},
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {headline level:2} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontFamily": undefined,
        "fontSize": 60,
        "fontWeight": "700",
        "letterSpacing": -2.5,
        "lineHeight": 60,
      },
      false,
      Object {},
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {headline level:3} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontFamily": undefined,
        "fontSize": 48,
        "fontWeight": "700",
        "letterSpacing": -2,
        "lineHeight": 48,
      },
      false,
      Object {},
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {headline level:4} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontFamily": undefined,
        "fontSize": 32,
        "fontWeight": "700",
        "letterSpacing": -1.33,
        "lineHeight": 34,
      },
      false,
      Object {},
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {headline level:5} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontFamily": undefined,
        "fontSize": 24,
        "fontWeight": "700",
        "letterSpacing": -1,
        "lineHeight": 26,
      },
      false,
      Object {},
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {headline level:6} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontFamily": undefined,
        "fontSize": 20,
        "fontWeight": "700",
        "letterSpacing": -0.83,
        "lineHeight": 22,
      },
      false,
      Object {},
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {lighten} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      Object {
        "color": "#707070",
      },
      Object {},
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {numberOfLines} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  numberOfLines={2}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      false,
      Object {},
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {style} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      false,
      Object {
        "color": "orange",
      },
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {subtitle level:1} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontFamily": undefined,
        "fontSize": 20,
        "fontWeight": "600",
        "lineHeight": 22,
      },
      false,
      Object {},
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {subtitle level:2} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontFamily": undefined,
        "fontSize": 16,
        "fontWeight": "600",
        "lineHeight": 18,
      },
      false,
      Object {},
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {subtitle level:3} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontFamily": undefined,
        "fontSize": 14,
        "fontWeight": "600",
        "lineHeight": 16,
      },
      false,
      Object {},
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;
